index.html updated with toyota testdrive form and an submit form updated with a new senddata.php file and style.css updated.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
 legend {
     font-size: 16px;
 }
+
+ .well {
+            background-color: rgb(22, 105, 173);
+        }
+
+h2.well {
+    color: #d0232d;
+}
+
+div.ui-content {
+     border: 5px solid white; 
+}
