index.html updated with toyota testdrive form and an submit form updated with a new senddata.php file and style.css updated.

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ h2.well {
     color: #d0232d;
 }
 
-div.ui-content {
+div#ui-content-senddata {
      border: 5px solid white; 
+}
+
+legend {
+    color: white;
 }
